Last fixes