@@ -2,5 +2,8 @@
 #
 #
 #
+export RX_MICRO_NETTY_OPTIONS="--add-opens=java.base/jdk.internal.misc=io.netty.common"
+export RX_MICRO_NETTY_OPTIONS="$RX_MICRO_NETTY_OPTIONS --add-opens=java.base/java.nio=io.netty.common"
+export RX_MICRO_NETTY_OPTIONS="$RX_MICRO_NETTY_OPTIONS -Dio.netty.tryReflectionSetAccessible=true"
 
-java -p lib:. --add-exports=java.base/jdk.internal.misc=io.netty.common -m examples.docker.image.hello.world.microservice/io.rxmicro.examples.docker.image.hello.world.microservice.HelloWorldMicroService
+java -p lib:. $RX_MICRO_NETTY_OPTIONS -m examples.docker.image.hello.world.microservice/io.rxmicro.examples.docker.image.hello.world.microservice.HelloWorldMicroService
